--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@genkit-ai/google-genai": "^1.21.0",
+    "@genkit-ai/googleai": "^1.21.0",
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -47,7 +48,12 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
+    "express": "^5.1.0",
     "firebase": "^12.3.0",
+    "firebase-admin": "^12.6.0",
+    "firebase-functions": "^6.0.1",
+    "genkit": "^1.21.0",
+    "genkit-cli": "^1.21.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.544.0",
     "next": "15.5.4",
@@ -61,12 +67,7 @@
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
-    "zod": "^4.1.11",
-    "express": "^5.1.0",
-    "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1",
-    "genkit": "^1.21.0",
-    "genkit-cli": "^1.21.0"
+    "zod": "^4.1.11"
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^4.1.1",
@@ -84,12 +85,17 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
     "cypress": "^15.3.0",
     "eslint": "^9",
+    "eslint-config-google": "^0.14.0",
     "eslint-config-next": "15.5.4",
+    "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-storybook": "^9.1.10",
+    "firebase-functions-test": "^3.1.0",
     "husky": "^9.1.7",
     "jest": "^30.2.0",
     "jest-environment-jsdom": "^30.2.0",
@@ -99,15 +105,10 @@
     "storybook": "^9.1.10",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.6",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5",
-    "vitest": "^3.2.4",
-    "@typescript-eslint/eslint-plugin": "^5.12.0",
-    "@typescript-eslint/parser": "^5.12.0",
-    "eslint-config-google": "^0.14.0",
-    "eslint-plugin-import": "^2.25.4",
-    "firebase-functions-test": "^3.1.0",
-    "tsx": "^4.20.6"
+    "vitest": "^3.2.4"
   },
   "lint-staged": {
     "**/*": "prettier --write --ignore-unknown"
