--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -71,58 +71,18 @@ jobs:
           node-version: 18
 
       - name: Install dependencies
-        run: npm ci
+        run: npm ci --legacy-peer-deps
 
       - name: Run tests
         run: npm test
 
-  deploy_environment:
-    name: Deploy to Environment
-    runs-on: ubuntu-latest
-    needs: [build_and_push, test_suite]
-    if: |
-      (needs.test_suite.result == 'success' || needs.test_suite.result == 'skipped')
-    steps:
-      - name: Deploy to Dev
-        if: github.ref == 'refs/heads/dev'
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.DEV_HOST }}
-          username: ${{ secrets.DEV_USERNAME }}
-          key: ${{ secrets.DEV_SSH_KEY }}
-          script: |
-            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/mental-health-companion:dev
-            docker-compose -f docker-compose.yml -f docker-compose.prod.yml up -d
-
-      - name: Deploy to Staging
-        if: github.ref == 'refs/heads/staging'
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.STAGING_HOST }}
-          username: ${{ secrets.STAGING_USERNAME }}
-          key: ${{ secrets.STAGING_SSH_KEY }}
-          script: |
-            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/mental-health-companion:staging
-            docker-compose -f docker-compose.yml -f docker-compose.prod.yml up -d
-
-      - name: Deploy to Master
-        if: github.ref == 'refs/heads/master'
-        uses: appleboy/ssh-action@master
-        with:
-          host: ${{ secrets.PROD_HOST }}
-          username: ${{ secrets.PROD_USERNAME }}
-          key: ${{ secrets.PROD_SSH_KEY }}
-          script: |
-            docker pull ${{ secrets.DOCKERHUB_USERNAME }}/mental-health-companion:latest
-            docker-compose -f docker-compose.yml -f docker-compose.prod.yml up -d
-
   deploy_vercel:
     name: Deploy to Vercel
     runs-on: ubuntu-latest
+    needs: build_and_push
     if: |
       github.ref == 'refs/heads/dev' ||
-      github.ref == 'refs/heads/stagingTest' ||
-      github.ref == 'refs/heads/releaseTest' ||
+      github.ref == 'refs/heads/staging' ||
       github.ref == 'refs/heads/release' ||
       github.ref == 'refs/heads/master'
     steps:
@@ -130,12 +90,8 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Deploy to Vercel
-        uses: vercel/vercel-action@v3
+        uses: amondnet/vercel-action@v25
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
-          vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
           # Deploy to production for 'master' and 'release' branches
-          vercel-args: "${{ (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/release') && '--prod' || '' }}"
-          # Pass environment variables to Vercel
-          vercel-env: 'GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }},NEXT_PUBLIC_FIREBASE_API_KEY=${{ secrets.NEXT_PUBLIC_FIREBASE_API_KEY }},NEXT_PUBLIC_FIREBASE_PROJECT_ID=${{ secrets.NEXT_PUBLIC_FIREBASE_PROJECT_ID }},NEXT_PUBLIC_FIREBASE_APP_ID=${{ secrets.NEXT_PUBLIC_FIREBASE_APP_ID }}'
+          vercel-args: "${{ (github.ref == 'refs/heads/master' || github.ref == 'refs/heads/release') && '--prod' || '' }} GEMINI_API_KEY=${{ secrets.GEMINI_API_KEY }} NEXT_PUBLIC_FIREBASE_API_KEY=${{ secrets.NEXT_PUBLIC_FIREBASE_API_KEY }} NEXT_PUBLIC_FIREBASE_PROJECT_ID=${{ secrets.NEXT_PUBLIC_FIREBASE_PROJECT_ID }} NEXT_PUBLIC_FIREBASE_APP_ID=${{ secrets.NEXT_PUBLIC_FIREBASE_APP_ID }}"
